tests/snapshots/cli__mv_reanchors_the_moved_files_own_links.snap
---
source: tests/cli.rs
info:
  program: ailint
  args:
    - mv
    - doc.md
    - sub/doc.md
---
success: true
exit_code: 0
----- stdout -----
moved doc.md → sub/doc.md (rewrote 1 reference(s) across 1 file(s))
✓ ailint: checked 2 files, no findings

----- stderr -----
