tests/snapshots/cli__mv_refuses_when_the_destination_exists.snap
---
source: tests/cli.rs
info:
  program: ailint
  args:
    - mv
    - a.md
    - b.md
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
ailint: destination `b.md` already exists
