tests/snapshots/cli__mv_rewrites_both_a_file_relative_link_and_a_root_relative_bare_path.snap
---
source: tests/cli.rs
info:
  program: ailint
  args:
    - mv
    - docs/persistence.md
    - docs/storage/persistence.md
---
success: true
exit_code: 0
----- stdout -----
moved docs/persistence.md → docs/storage/persistence.md (rewrote 2 reference(s) across 1 file(s))
✓ ailint: checked 2 files, no findings

----- stderr -----
