tests/snapshots/cli__mv_rewrites_root_relative_bare_path.snap
---
source: tests/cli.rs
expression: "fs::read_to_string(dir.path().join(\"plans/phase.md\")).unwrap()"
---
See the storage map at [map](../docs/storage/persistence.md) — root form `docs/storage/persistence.md`.
