tests/snapshots/cli__never_wrap_flags_a_hard_wrapped_paragraph_then_fix_joins_it.snap
---
source: tests/cli.rs
info:
  program: aigarden
  args:
    - check
---
success: false
exit_code: 1
----- stdout -----
error[markdown-style]: [MD013] Paragraph is hard-wrapped; never-wrap keeps it on one line
 --> s.md:3:1
  |
3 | / A paragraph the author
4 | | hard-wrapped across
5 | | three lines.
  | |____________^
error[markdown-style]: [MD013] List item is hard-wrapped; never-wrap keeps it on one line
 --> s.md:7:1
  |
7 | / - a list item the author
8 | |   also hard-wrapped
  | |___________________^
aigarden: 2 findings

----- stderr -----
