tests/snapshots/cli__never_wrap_joins_the_paragraph.snap
---
source: tests/cli.rs
expression: fixed
---
# Title

A paragraph the author hard-wrapped across three lines.

- a list item the author also hard-wrapped
