tests/snapshots/cli__never_wrap_leaves_code_fences_and_tables_untouched-2.snap
---
source: tests/cli.rs
info:
  program: aigarden
  args:
    - check
    - "--fix"
---
success: true
exit_code: 0
----- stdout -----
✓ aigarden: checked 2 files, no findings

----- stderr -----
