tests/snapshots/cli__no_files_found_fails_with_exit_two.snap
---
source: tests/cli.rs
info:
  program: aigarden
  args:
    - check
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
aigarden: no files found under ["."]
