tests/snapshots/cli__per_file_ignores_scopes_a_single_rule_by_path.snap
---
source: tests/cli.rs
info:
  program: aigarden
  args:
    - check
---
success: false
exit_code: 1
----- stdout -----
grammar.rs: [file-length] 2 lines exceeds the budget of 1 for `**/*.rs`
  help: split the file or raise the `**/*.rs` budget in aigarden.toml
aigarden: 1 finding

----- stderr -----
