tests/snapshots/cli__per_file_ignores_unions_rules_and_scopes_by_glob.snap
---
source: tests/cli.rs
info:
  program: ailint
  args:
    - check
---
success: false
exit_code: 1
----- stdout -----
error[link-target]: link target `missing.md` does not exist
 --> docs/other.md:1:12
  |
1 | See [gone](missing.md) and `src/nope.rs` in the tree.
  |            ^^^^^^^^^^ fix the path, or create the target
ailint: 1 finding

----- stderr -----
